# NewsForge

./: .env  .gitignore  README.md  pyproject.toml
compose/: docker-compose.yml
compose/minio/: batch-policy.json  ingestion-policy.json  speed-policy.json
compose/postgres/: init.sql
infra/: docker-compose.yml
infra/postgres/: init.sql
src/news_crawler/: crawler.py  env.py
src/news_letter_maker/: app.py
src/news_letter_maker/lib/: gemini.py  news.py
src/news_letter_maker/pages/: newsletter_maker.py  realtime_info.py
src/news_letter_maker/utils/: db.py  env.py
src/newsforge/: env.py
src/newsforge/batch/: html_news.py
src/newsforge/etls/: html_news.py  info_stream.py  stream_ingestion.py
src/newsforge/models/: gemini_flash.py
src/newsforge/speed/: stream_ingestion.py
src/newsforge/utils/: env.py  gemini_flash.py
